# pLabels

./: CMakeLists.txt  README.md  conanfile.py  info.json
.github/workflows/: main.yml
hostProfiles/: androidArmv7.profile  androidArmv8.profile  androidx86.profile  androidx86_64.profile  windowsMsys.profile
share/: 71-brother-ptouch.rules
src/: CMakeLists.txt  FontfamiliesModel.cpp  FontfamiliesModel.h  Helper.h  PrinterImage.cpp  PrinterImage.h  PrinterManager.cpp  PrinterManager.h  Roles.h  TapeModel.cpp  TapeModel.h  main.cpp
src/libpTouch/: gettext.h  libptouch.c  ptouch.h  ptouchwrapper.c  ptouchwrapper.h
src/pTouch/: ContinueDialog.qml  Editor.qml  EditorToolBar.qml  Landingpage.qml  Main.qml  OpenFileDialog.qml  PrintDialog.qml  PrinterInfoDialog.qml  ResizableRectangle.qml  ResizeGrabber.qml  SaveDialog.qml  TapeSelectDialog.qml  TextComponent.qml  Viewport.qml  main.qml
